# BunkerMedia

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml  install-verify.yml  release.yml  security.yml  soak.yml
deploy/raspberrypi/: config.pi.yaml  docker-compose.pi.yml  setup_pi.sh  verify_pi_install.sh
deploy/systemd/: bunkermedia.service
docs/: ARCHITECTURE.md  BUNKU_MODE_UI.md  FRESH_INSTALL_VERIFICATION.md  GOVERNANCE.md  OPERATIONS.md  PRODUCT_STRATEGY.md  RELEASE_POLICY.md  SDS.md  SECURITY_HARDENING_CHECKLIST.md  SOAK_VALIDATION.md  SRS.md  UPGRADE_VALIDATION_MATRIX.md
scripts/: run_soak_validation.py  verify_fresh_install.sh
src/bunkermedia/: __init__.py  __main__.py  artwork.py  cli.py  config.py  database.py  downloader.py  import_organizer.py  intelligence.py  library.py  logging_utils.py  maintenance.py  metrics.py  migrations.py  models.py  network.py  planner.py  recommender.py  scraper.py  server.py  service.py  storage_policy.py  storage_privacy.py  system_monitor.py  workers.py
src/bunkermedia/providers/: __init__.py  base.py  local.py  registry.py  rss.py  youtube.py
src/bunkermedia/ui/: app.js  index.html  manifest.webmanifest  styles.css  (+1 more)
tests/: test_integration.py  test_privacy.py  test_smoke.py  test_upgrade_matrix.py
