[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/bunkermedia"]

[tool.coverage.report]
fail_under = 55
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["yaml", "yt_dlp", "yt_dlp.*"]
ignore_missing_imports = true
